<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/view6"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="50dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@+id/view5"
        tools:layout_editor_absoluteX="8dp" />

    <View
        android:id="@+id/view5"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="32dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@+id/tvLowcostTitle"
        tools:layout_editor_absoluteX="8dp" />

    <View
        android:id="@+id/view4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="32dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTipoCombTitle" />

    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="32dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMarcaTitle" />

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFilterTitle" />

    <es.unican.is.appgasolineras.common.utils.MultipleSpinner
        android:id="@+id/spnMarca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:gravity="end"
        android:textSize="16sp"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/tvMarcaTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvMarcaTitle"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/tvFilterTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/filter"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Filtrar Gasolineras" />

    <TextView
        android:id="@+id/tvMarcaTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/brands"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2"
        tools:text="Marcas" />


    <TextView
        android:id="@+id/tvTipoCombTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/combustible_types"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tvMarcaTitle"
        app:layout_constraintTop_toBottomOf="@+id/view3" />

    <TextView
        android:id="@+id/tvLowcostTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/lowcost"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tvTipoCombTitle"
        app:layout_constraintTop_toBottomOf="@+id/view4" />

    <Spinner
        android:id="@+id/spnTipoCombustible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:gravity="end"
        android:checkMark="?android:attr/listChoiceIndicatorSingle"
        android:contentDescription="@string/all"
        android:minHeight="48dp"
        android:spinnerMode="dialog"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvTipoCombTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvTipoCombTitle" />

    <ImageButton
        android:id="@+id/btnInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-10dp"
        android:backgroundTint="#00AC3D3D"
        android:contentDescription="@string/consideraLowcost"
        android:minWidth="48dp"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/tvLowcostTitle"
        app:layout_constraintStart_toEndOf="@+id/tvLowcostTitle"
        app:layout_constraintTop_toTopOf="@+id/tvLowcostTitle"
        app:srcCompat="@drawable/info" />

    <CheckBox
        android:id="@+id/chckLowcost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:textAlignment="viewStart"
        app:layout_constraintBottom_toBottomOf="@+id/tvLowcostTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvLowcostTitle" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/view6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view5">

            <TextView
                android:id="@+id/tvCancel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackground"
                android:gravity="center"
                android:text="@string/cancel"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvApply"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackground"
                android:gravity="center"
                android:text="@string/apply"
                android:textAlignment="center"
                android:textStyle="bold" />
        </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>