...
    <string name="loadErrorPromociones">Ha habido un error cargando las promociones</string>
    <string name="combustible_types">Tipos de combustible</string>
    <string name="brands">Marcas</string>
    <string name="all">Todos</string>
    <string name="all_fem">Todas</string>
    <string name="galp">Galp</string>
    <string name="cepsa">Cepsa</string>
    <string name="carrefour">Carrefour</string>
    <string name="campsa">Campsa</string>
    <string name="avia">Avia</string>
    <string name="petronor">Petronor</string>
    <string name="repsol">Repsol</string>
    <string name="shell">Shell</string>
...
    <string name="promoSinGas">No se han indicado gasolineras.</string>
    <string name="promoSinDesc">No se ha indicado un descuento.</string>
    <string name="promoPorcErr">El porcentaje indicado no es válido.</string>
    <string name="promoEuroLErr">El descuento en €/L indicado no es válido.</string>
    <string name="promoBDErr">Se ha producido un error al acceder a la base de datos.</string>

    <string name="lowcost">Mostrar solo low-cost</string>
    <string name="consideraLowcost">Gasolineras consideradas low-cost</string>

    <string name="marcasLowcost">Marcas Low-cost</string>
    <string name="instLowcost">Se consideran gasolineras low-cost aquellas que se corresponden con
    las siguientes marcas:</string>

...
